--- a/rmarkdownDoc.Rmd
+++ b/rmarkdownDoc.Rmd
@@ -5,18 +5,13 @@ date: "January 9, 2018"
 output: html_document
 runtime: shiny
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-
-```{r tabsets, echo=FALSE}
+  
+```{r, echo = F}
 library(shiny)
 shinyAppDir(getwd(),
   options = list(
-    width = "100%", height = 550
+    width = 1500, height = 1000
   )
 )
 ```
-
+  
